--- a/Pages_styles/projects.css
+++ b/Pages_styles/projects.css
@@ -32,6 +32,7 @@ body{
     width: 40%;
     text-decoration: none;
     color:white;
+    margin-right:-9em;
 }
 .active{
     color: black;
@@ -62,6 +63,7 @@ body{
     text-decoration: none;
     color:white;
     text-transform: uppercase;
+    margin-left:-4em;
 }
 
 
