--- a/Pages_styles/skills.css
+++ b/Pages_styles/skills.css
@@ -1,3 +1,12 @@
+body {
+    margin: 0;
+    overflow: hidden;
+    background-color: #f0f0f0;
+}
+canvas {
+    display: block;
+}
+
 .navbar{
     display: flex;
     justify-content: space-between;
