--- a/Pages_styles/contact.css
+++ b/Pages_styles/contact.css
@@ -9,61 +9,63 @@
 
 body,input,textarea{
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
+}
+
+#bg-video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    opacity: 0.88;
 }
 
 .navbar{
-    position: fixed;
-    width: 100%;
-    padding: 1.5rem 0;
-    z-index: 1000;
-    background-color: #1abc9c;
-    color:#fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: 0.5s;
-}
-
-.logo{
-    font-size: 1.5rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color:#fff;
+    padding: 20px 10%;
+    background-color: #0e0d0d;
+    color: white;
+    font-size: 1.2em;
     text-decoration: none;
-    margin-left:3rem;
+    height:80px;
+    color:white;
 }
 
 .navlist{
     display: flex;
+    justify-content: space-between;
     list-style: none;
-    margin-right: 1.5rem;
-    font-family: 'Poppins' ,sans-serif;
+    width: 40%;
+    text-decoration: none;
+    color:white;
+    margin-right:-9em;
+}
+.active{
+    color: black;
+    background-color:white;
+    border-radius: 20px;
+    padding:0.6em 1.5em;
+    text-decoration: none;
+
 }
 
-.navlist a{
+.navlist a:not(.active){
     text-decoration: none;
-    color:#fff;
-    padding: 0.5rem 1.5rem;
-    border-radius: 25px;
-    transition: 0.3s;
-    margin-left:1rem;
-    font-family: 'Poppins', sans-serif;
+    color:white;
+    padding:0.6em 1.5em;
+    border-radius: 20px;
+    transition: all 0.3s ease;
 }
 
 .navlist a:not(.active):hover{
-    background-color:#000000;
-    transition: 0.3s;
-}
-
-.navlist a.active{
-    text-decoration: none;
-    color:#fff;
-    padding: 0.5rem 1.5rem;
-    border-radius: 5px;
-    transition: 0.3s;
-    border-radius:25px;
-    background-color:#000000;
+    background-color:white;
+    color:black;
+    transition: all 0.3s ease;
 }
 
 .container{
@@ -71,11 +73,19 @@ body,input,textarea{
     width: 100%;
     min-height: 100vh;
     padding: 2rem;
-    background-color:#fafafa;
     overflow:hidden;
     display:flex ;
     align-items:center;
     justify-content: center;
+}
+
+.logo{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+    color:white;
+    text-transform: uppercase;
+    margin-left:-4em;
 }
 
 .form{
@@ -91,13 +101,13 @@ body,input,textarea{
 }
 
 .contact-form{
-    background-color: #1abc9c;
+    background-color: rgb(30 41 38);
     position:relative;
 }
 
 .circle{
     border-radius: 50%;
-    background:linear-gradient(135deg, transparent 20%, #149279) ;
+    background:linear-gradient(135deg, transparent 20%, #8f8f8f) ;
     position:absolute;
 }
 
@@ -120,7 +130,7 @@ body,input,textarea{
     position:absolute;
     width: 26px;
     height: 26px;
-    background-color: #1abc9c;
+    background-color: rgb(30 41 38);
     transform: rotate(45deg);
     top:50px;
     left:-13px;
@@ -193,7 +203,7 @@ textarea.input{
     background-color:#fff;
     border: 2px solid #fafafa;
     font-size:0.95rem;
-    color:#1abc9c;
+    color:#000000;
     line-height: 1;
     border-radius:25px;
     outline:none;
@@ -226,7 +236,7 @@ textarea.input{
     opacity: 0;
     transition: 0.3s ;
     height:5px;
-    background-color:#1abc9c;
+    background-color:rgb(30 41 38);
     top:50%;
     transform: translateY(-50%);
 }
@@ -258,7 +268,7 @@ textarea.input{
 }
 
 .contact-info .title{
-    color:#1abc9c;
+    color:#000000;
 }
 
 .text{
@@ -313,7 +323,7 @@ textarea.input{
     position:absolute;
     width: 110px;
     height: 100px;
-    border:22px solid #1abc9c;
+    border:22px solid rgb(6 14 13);
     border-radius:50%;
     bottom:-77px;
     right:50px;
@@ -325,7 +335,7 @@ textarea.input{
     width: 500px;
     height: 500px;
     border-radius: 50%;
-    background:linear-gradient(to bottom,#1cd4af,#159b80);
+    background:linear-gradient(to bottom,#177562,#0b352c);
     bottom:50%;
     right:50%;
     transform: translate(-40%,38%);
@@ -336,7 +346,7 @@ textarea.input{
     position: absolute;
     width: 360px;
     height: 360px;
-    background-color:#fafafa;
+    background-color:#211717;
     border-radius:50%;
     top:calc(50% - 180px);
     left:calc(50% - 180px);
