--- a/Pages_styles/skills.css
+++ b/Pages_styles/skills.css
@@ -1,11 +1,38 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
+
+*{
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    margin:0;
     overflow: hidden;
     background-color: #f0f0f0;
+    position: relative;
 }
 canvas {
     display: block;
 }
+
+a {
+    user-select: none; /* Empêche la sélection de texte */
+    -webkit-touch-callout: none; /* Empêche l'apparition du menu de sélection sur les appareils tactiles */
+    -webkit-user-select: none; /* Empêche la sélection de texte sur les navigateurs WebKit (Safari, Chrome) */
+    -moz-user-select: none; /* Empêche la sélection de texte sur Firefox */
+    -ms-user-select: none; /* Empêche la sélection de texte sur Internet Explorer/Edge */
+}
+
+#threejs-container {
+    position: absolute; /* Position absolue pour ignorer la mise en page du reste de la page */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 
 .navbar{
     display: flex;
@@ -28,4 +55,35 @@ canvas {
     text-decoration: none;
     color:white;
     margin-right:-9em;
+}
+.active{
+    color: black;
+    background-color:white;
+    border-radius: 20px;
+    padding:0.6em 1.5em;
+    text-decoration: none;
+
+}
+
+.navlist a:not(.active){
+    text-decoration: none;
+    color:white;
+    padding:0.6em 1.5em;
+    border-radius: 20px;
+    transition: all 0.3s ease;
+}
+
+.navlist a:not(.active):hover{
+    background-color:white;
+    color:black;
+    transition: all 0.3s ease;
+}
+
+.logo{
+    font-size: 1.5em;
+    font-weight: bold;
+    text-decoration: none;
+    color:white;
+    text-transform: uppercase;
+    margin-left:-4em;
 }
