--- a/Pages_styles/contact.css
+++ b/Pages_styles/contact.css
@@ -80,7 +80,7 @@ body,input,textarea{
 }
 
 .logo{
-    font-size: 1.5em;
+    font-size: 32px;
     font-weight: bold;
     text-decoration: none;
     color:white;
