--- a/Pages_styles/projects.css
+++ b/Pages_styles/projects.css
@@ -58,7 +58,7 @@ body{
 }
 
 .logo{
-    font-size: 1.5em;
+    font-size: 32px;
     font-weight: bold;
     text-decoration: none;
     color:white;
