--- a/style.css
+++ b/style.css
@@ -150,6 +150,19 @@ section img#mountains_front{
     font-size: 1.2em;
 }
 
+@media (max-width: 1100px) {
+    header ul{
+        font-size: 16px;
+    
+    }
+
+    a.logo{
+        font-size: 24px;
+        margin-left: 1em;
+    
+    }
+}
+
 @media (max-width: 992px) {
     header .logo {
         font-size: 1.5em;
@@ -198,7 +211,7 @@ section img#mountains_front{
     }
 }
 
-/* Pour les téléphones mobiles */
+
 @media (max-width: 576px) {
     header .logo {
         font-size: 1.2em;
