--- a/style.css
+++ b/style.css
@@ -40,13 +40,15 @@ header ul{
     justify-content: center;
     align-items: center;
     font-size:19.2px;
-    padding: 11.52px 28.8px;
-    margin-right:-3em;
+    padding: 11.52px;
+    padding-left:1em;
 }
 
 header ul li{
     list-style: none;
     margin-right: 20px;
+    margin-left:1em;
+
 }
 
 header ul li a{
@@ -67,6 +69,7 @@ header ul li a.active{
     color:#2b1055;
     padding: 0.6em 1.5em;
 }
+
 
 section{
     position: relative;
@@ -150,7 +153,16 @@ section img#mountains_front{
     font-size: 1.2em;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1250px) {
+  
+    a.logo{
+        font-size: 26px;
+        margin-left: 1em;
+    
+    }
+}
+
+@media (max-width: 1125px) {
     header ul{
         font-size: 16px;
     
@@ -173,6 +185,7 @@ section img#mountains_front{
         font-size: 16px;
         padding: 8px 20px;
         margin-right: -2em;
+        display: none;
     }
 
     header ul li {
