--- a/Pages_styles/projects.css
+++ b/Pages_styles/projects.css
@@ -14,9 +14,8 @@ body{
 
 .navbar{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 20px 10%;
+    padding: 13px 3%;
     background-color: #0e0d0d;
     color: white;
     font-size: 1.2em;
@@ -27,11 +26,11 @@ body{
 
 .navlist{
     display: flex;
-    justify-content: space-between;
     list-style: none;
-    width: 40%;
+    width: 100%;
     text-decoration: none;
     color:white;
+    justify-content: flex-end;
 }
 
 .active{
@@ -41,8 +40,6 @@ body{
     padding:0.6em 1.5em;
     text-decoration: none;
     transition: all 0.3s ease;
-
-
 }
 
 .navlist a:not(.active){
@@ -56,12 +53,18 @@ body{
     background-color:white;
     color:black;
     transition: all 0.3s ease;
-    padding:0.6em 1.5em;
-
+    padding:0.6em 3em;
 }
 
 .navlist a{
-    padding:0.6em 1.5em;
+    padding:0.6em 3em;
+    margin-right:0.5em;
+}
+
+.burger-menu{
+    display: none;
+    z-index:4;
+    opacity: 0;
 }
 
 .logo{
@@ -70,9 +73,85 @@ body{
     text-decoration: none;
     color:white;
     text-transform: uppercase;
+    width: 100%;
 }
 
+.menu-burger-hide {
+    position: fixed;
+    top: 0;
+    right: -250px;
+    width: 250px;
+    height: 100vh;
+    background-color: #333;
+    color: white;
+    transition: right 0.3s ease;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
+    text-align: center;
+}
 
+nav.menu-burger-hide ul li {
+    margin: 20px 0;
+}
+
+nav.menu-burger-hide ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav.menu-burger-hide ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-btn {
+    display: none;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 35px;
+    height: 30px;
+    cursor: pointer;
+    z-index: 101;
+}
+
+.menu-btn span {
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: white;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+
+#menu-toggle:checked + .menu-btn span:nth-child(1) {
+    transform: translateY(10px) rotate(45deg);
+    width:35px;
+    height: 4px;
+
+}
+
+#menu-toggle:checked + .menu-btn span:nth-child(2) {
+    opacity: 0;
+}
+
+#menu-toggle:checked + .menu-btn span:nth-child(3) {
+    transform: translateY(-10px) rotate(-45deg);
+    width:35px;
+    height: 4px;
+}
+
+#menu-toggle:checked ~ nav.menu-burger-hide {
+    right: 0;
+}
 
 .wrapper{
     width: 100%;
@@ -178,17 +257,16 @@ body{
     
 }
 
-input{
+.onglet{
     display: none;
 }
 
-input:checked + label{
+.onglet:checked + label{
     width: 600px;
     box-shadow: 0px 10px 30px -5px rgba(224, 192, 11, 0.8);
-
 }
 
-input:checked + label .description{
+.onglet:checked + label .description{
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
@@ -196,35 +274,28 @@ input:checked + label .description{
 .card[for="c1"]{
     background-image: url('/Medias/portfolio2k22.PNG');
     background-position: 50%;    
-
 }
 
 .card[for="c2"]{
     background-image: url('/Medias/Consensus.PNG');    
     background-position: 0%; 
-
-
 }
 
 .card[for="c3"]{
     background-image: url('/Medias/spotelec.PNG');    
     background-position: 50%;    
-
 }
 
 .card[for="c4"]{
     background-image: url('/Medias/portfolio2k24.PNG');
     background-position: 50%;    
-
 }
-
 
 .popup {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.8);
     padding: 20px;
     border-radius: 10px;
-    
     left: 50%;
     transform: translateX(-50%);
     display: none;
@@ -264,21 +335,7 @@ input:checked + label .description{
     transition:all 0.3s ease;
 }
 
-@media (max-width: 1400px) {
-   .navbar ul{
-        margin-right:4em;
-   }
-}
-
 @media (max-width: 1200px) {
-    .navbar ul{
-         margin-right:8em;
-    }
-
-    input:checked + label{
-        width: 500px;
-    }
-
     .card{
         width: 70px;
     }
@@ -289,16 +346,15 @@ input:checked + label .description{
 }
 
 @media (max-width: 1050px) {
-    .navbar ul{
-         display: none;
+    .navlist {
+        display: none;
+    }
+    .menu-btn {
+        display: block;
     }
 }
 
 @media (max-width: 850px) {
-    input:checked + label{
-        width: 350px;
-    }
-
     .card{
         width: 65px;
     }
@@ -306,58 +362,34 @@ input:checked + label .description{
     .popup.active {
         font-size: 12px;
     }
+    .logo{
+        font-size: 28px;
+    }
 }
 
 @media (max-width: 650px) {
     .container{
-        flex-direction: column;
+        height:300px;
     }
-
-    .wrapper{
-        justify-content: flex-start;
-    }
-
-    input:checked + label{
-        width: 450px;
-    }
-
     .card{
-        margin-bottom:1em;
-    }
-
-    .logo{
-        margin-right: 0;
-        font-size: 28px;
-    }
-
-    .popup.active {
-        font-size: 11px;
-    }
-    
-}
-
-@media (max-width: 500px) {
-    .container{
-        flex-direction: column;
-    }
-
-    .wrapper{
-        justify-content: flex-start;
-    }
-
-    input:checked + label{
-        width: 300px;
-    }
-
-    .card{
-        margin-bottom:1em;
-    }
-
-    .logo{
-        font-size: 22px;
+        width: 60px;
     }
 
     .popup.active {
         font-size: 10px;
+    }
+}
+
+@media (max-width: 450px) {
+    .card{
+        width: 55px;
+    }
+
+    .popup.active {
+        font-size: 8px;
+    }
+
+    .logo{
+        font-size: 22px;
     }
 }
