--- a/Pages_styles/projects.css
+++ b/Pages_styles/projects.css
@@ -247,6 +247,8 @@ nav.menu-burger-hide ul li a {
     transition: all 0.2s ease;
 }
 
+
+
 .description .p{
     color:#b0b0ba;
     padding-top: 5px;
@@ -361,7 +363,7 @@ nav.menu-burger-hide ul li a {
     .container{
         display: flex;
         flex-direction: column;
-        height:100%;
+        height:100vh;
         justify-content: center;
     }
 }
@@ -372,6 +374,10 @@ nav.menu-burger-hide ul li a {
     }
     .logo{
         font-size: 28px;
+    }
+    .p_details{
+        font-size: 12px;
+        width:50%;
     }
 }
 
@@ -389,6 +395,10 @@ nav.menu-burger-hide ul li a {
     .onglet:checked + label.card{
         width: 300px;
     }
+    .p_details{
+        width:40%;
+    }
+   
 }
 
 @media (max-width: 450px) {
@@ -403,5 +413,15 @@ nav.menu-burger-hide ul li a {
 @media (max-width: 350px) {
     .onglet:checked + label.card{
         width: 200px;
+    }
+    .p_details{
+        width:22%;
+        font-size:8px;
+    }
+    .project_title{
+        font-size: 12px;
+    }
+    .logo{
+        font-size: 18px;
     }
 }
