--- a/Pages_styles/projects.css
+++ b/Pages_styles/projects.css
@@ -365,6 +365,7 @@ nav.menu-burger-hide ul li a {
         flex-direction: column;
         height:100vh;
         justify-content: center;
+        margin-bottom:2em;
     }
 }
 
